Archive2/54/ee763befb750f7/output
main.cpp:15:11: error: '::main' must return 'int'
 void main()
           ^
